x overflow in login signup pages fixed

--- a/src/pages/AboutUs/AboutUs.css
+++ b/src/pages/AboutUs/AboutUs.css
@@ -1,6 +1,8 @@
 .about-us-page {
     text-align: center;
     width: 100%;
+    max-width: 100vw;
+    word-break: break-word;
 }
   
 .heading {
@@ -15,14 +17,13 @@
 }
   
 .team-section {
-  background-color: aqua;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
+  justify-content: space-around;
 }
   
 .team-member {
-  flex: 0 1 calc(33.33% - 20px);
   text-align: center;
 }
   
